<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/profile_guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/profile_guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toStartOf="@+id/profile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/profile_guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/email"
            app:layout_constraintEnd_toStartOf="@+id/profile_guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/profile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <EditText
            android:id="@+id/profile_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/endereco"
            app:layout_constraintEnd_toStartOf="@+id/profile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/profile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nome"
            app:layout_constraintEnd_toStartOf="@+id/profile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/profile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/profile_avatar" />

        <EditText
            android:id="@+id/profile_age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/idade"
            app:layout_constraintStart_toStartOf="@+id/profile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/profile_address" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/telefone"
            app:layout_constraintEnd_toStartOf="@+id/profile_guideline_right"
            app:layout_constraintStart_toEndOf="@+id/profile_age"
            app:layout_constraintTop_toBottomOf="@+id/profile_address" />

        <TextView
            android:id="@+id/profile_credit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/credito"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="@+id/profile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/profile_age" />

        <TextView
            android:id="@+id/profile_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_credit_name"
            app:layout_constraintTop_toTopOf="@+id/profile_credit_name" />

        <TextView
            android:id="@+id/profile_donate_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/doacoes"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="@+id/profile_credit_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_credit_name" />

        <TextView
            android:id="@+id/profile_donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/profile_donate_name"
            app:layout_constraintTop_toTopOf="@+id/profile_donate_name" />

        <TextView
            android:id="@+id/profile_rating_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:text="@string/avaliacoes"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="@+id/profile_donate"
            app:layout_constraintTop_toBottomOf="@+id/profile_withdraw_name" />

        <TextView
            android:id="@+id/profile_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="5,0"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/profile_rating_name"
            app:layout_constraintTop_toTopOf="@+id/profile_rating_name" />

        <TextView
            android:id="@+id/profile_withdraw_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:text="@string/retirada"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="@+id/profile_credit"
            app:layout_constraintTop_toTopOf="@+id/profile_credit_name" />

        <TextView
            android:id="@+id/profile_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/profile_withdraw_name"
            app:layout_constraintTop_toTopOf="@+id/profile_withdraw_name" />

        <Button
            android:id="@+id/profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:onClick="changeUser"
            android:text="Salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/profile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/profile_rating_name" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>